--- a/.github/workflows/tflint.yaml
+++ b/.github/workflows/tflint.yaml
@@ -24,7 +24,7 @@ jobs:
         run: ls -la
         
       - name: Linting the terraform code
-        run: sudo docker run --rm -v "$(pwd):/src" aquasec/tfsec /src 
+        run: sudo docker run --rm -v $(pwd):/data -t ghcr.io/terraform-linters/tflint
         
 #       - name: checking the contents
 #         run: ls -la && cat report
