--- a/.github/workflows/tflint.yaml
+++ b/.github/workflows/tflint.yaml
@@ -24,10 +24,10 @@ jobs:
         run: ls -la
         
       - name: Linting the terraform code
-        run: sudo docker run --rm -v $(pwd):/data -t ghcr.io/terraform-linters/tflint > report
+        run: sudo docker run --rm -v $(pwd):/data -t ghcr.io/terraform-linters/tflint
         
-      - name: checking the contents
-        run: cat report
+#       - name: checking the contents
+#         run: cat report
 
   
 
